# flickr-uploader

./: .gitignore  README.md  config.yaml.example  flickr-uploader.cabal
app/: Main.hs
app/Uploader/: Auth.hs  HTTP.hs  Types.hs
src/: Lib.hs
