name:                flickr-uploader
version:             0.0.0.0
synopsis:            Simple project template for stack
description:         Not given
homepage:            https://github.com/craigdallimore
author:              Craig Dallimore
maintainer:          decoy9697@gmail.com
copyright:           2017 Craig Dallimoree
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
