name:                flickr-uploader
version:             0.0.0.0
synopsis:            A basic photo uploader using the flickr API
description:         Not given
homepage:            https://github.com/craigdallimore/flickr-uploader
author:              Craig Dallimore
maintainer:          decoy9697@gmail.com
copyright:           2017 Craig Dallimoree
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable flickr-uploader
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , aeson
                     , bytestring
                     , containers
                     , pureMD5
                     , yaml
  default-language:    Haskell2010
